NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/CONTAINER_Tentative_Production_Schedule__c.object-meta.xml
<CustomObject>
    <label>Tentative Production Schedule</label>
    <nameField>
        <displayFormat>TPS-{0000}</displayFormat>
        <label>Tentative Production Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tentative Production Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>