NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Number</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Tentative Production Schedule</relationshipLabel>
    <relationshipName>Tentative_Production_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>