NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_Quote_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Product_Type__c</fullName>
    <label>Quote Product Type</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>