NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_Select_Stock__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Select_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Stock</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CONTAINER_Stock_Inventory__c.CONTAINER_Quote_Product_Type_Number__c</field>
            <operation>equals</operation>
            <valueField>$Source.CONTAINER_Quote_Product_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CONTAINER_Stock_Inventory__c</referenceTo>
    <relationshipLabel>Tentative Production Schedule</relationshipLabel>
    <relationshipName>Tentative_Production_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>