NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_Stock_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Stock_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stock job number lookup from Quote object</description>
    <label>Stock Job #</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Tentative Production Schedule1</relationshipLabel>
    <relationshipName>Tentative_Production_Schedule1</relationshipName>
    <type>Lookup</type>
</CustomField>