NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_TentativeProdSchd_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_TentativeProdSchd_Job__c</fullName>
    <formula>CONTAINER_Select_Stock__r.CONTAINER_Inventory_Job__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job #</label>
    <type>Text</type>
</CustomField>