NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_TentativeProdSchd_Model__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_TentativeProdSchd_Model__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>