NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/fields/CONTAINER_TentativeProdSchd_Product__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_TentativeProdSchd_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>