NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/recordTypes/CONTAINER_Tentative_Production_Schedule.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_Tentative_Production_Schedule</fullName>
    <active>true</active>
    <label>Tentative Production Schedule</label>
</RecordType>