NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/recordTypes/CONTAINER_Tentative_Production_Schedule_Add_From_Stock.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_Tentative_Production_Schedule_Add_From_Stock</fullName>
    <active>true</active>
    <label>Tentative Production Schedule Add From Stock</label>
</RecordType>