NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/validationRules/CONATINER_Tentative_Production_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>CONATINER_Tentative_Production_Schedule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(CONTAINER_Quote_Number__r.ApprovalStatus__c , &apos;Pending&apos;),NOT($Permission.Restrict_All_Except_CAM_and_CS), OR(ISCHANGED(CONTAINER_Factory__c), ISCHANGED(CONTAINER_TentativeProductionSchd_Qty__c), ISCHANGED(CONTAINER_Week_Of__c),ISCHANGED( CONTAINER_Quote_Number__c )))</errorConditionFormula>
    <errorMessage>You need to recall approval to make changes.</errorMessage>
</ValidationRule>