NATTQA-ENV/force-app/main/default/objects/CONTAINER_Tentative_Production_Schedule__c/validationRules/Remaining_quantity_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Remaining_quantity_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>IF(CONTAINER_Select_Stock__r.CONTAINER_Remaining_Quantity__c = 0,TRUE, IF( CONTAINER_Select_Stock__r.CONTAINER_Inventory_Qty__c  -  CONTAINER_Select_Stock__r.CONTAINER_Remaining_Quantity__c  &lt; 0, True,  IF( CONTAINER_Select_Stock__r.CONTAINER_Remaining_Quantity__c  &lt; 0, True, False) ) )</errorConditionFormula>
    <errorMessage>Remaining quantity can not be negative.</errorMessage>
</ValidationRule>